add some logic, make searchdata and save data function work.

--- a/server/login.html
+++ b/server/login.html
@@ -32,7 +32,7 @@
         $.ajax({
             url: '/getToken',
             data: data,
-            dataType: "json",
+            // dataType: "json",
             type: 'post',
             success (e) {
                 console.log('send code sucess: ', e)
